Don't toggle on and off, instead show a scoreboard

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "CLS",
   "description": "Show the Cumulative Layout Shift (CLS) score for the given tab",
-  "version": "0.1",
+  "version": "0.2",
   "background": {
     "scripts": ["background.js"],
     "persistent": false
@@ -13,8 +13,9 @@
     "128": "icon-128.png"
   },
   "browser_action": {
-    "default_icon": "cls-on.png",
-    "default_title": "Click to toggle the extension on and off"
+    "default_icon": "icon-on.png",
+    "default_popup": "popup.html",
+    "default_title": "Click to see the scorecard for CLS from your browsing"
   },
   "manifest_version": 2
 }
